@@ -4,6 +4,7 @@
 
 2010-11-24  Steffen Kamper  <steffen@typo3.org>
 
+	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_message_directory
 	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_matchcondition_directory
 	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_mail_directory
 	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_interface_directory
